kubernetes/infrastructure/base/teleport/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teleport
spec:
  selector:
    app.kubernetes.io/component: proxy
  ports:
    - name: http
      port: 443
      targetPort: 3080
