kubernetes/infrastructure/base/teleport/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teleport
  namespace: teleport
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`teleport.theblacklodge.dev`)
      kind: Rule
      services:
        - name: teleport
          port: 443
          scheme: https
          serversTransport: teleport-insecure
